Task.13 ページネーションの作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,14 +2,19 @@
 ja:
   hello: "こんにちは"
 
-  # activerecord関連する項目ということを宣言
   activerecord:
-    # modelを宣言
     models:
       article: 記事
 
-  # modelのattribute名テーブルのカラム名を宣言
-  attributes:
-    article:
-      title: タイトル
-      content: 本文
+    attributes:
+      article:
+        title: タイトル
+        content: 本文
+
+  views:
+    pagination:
+      first: '最初'
+      last: '最後'
+      previous: '前'
+      next: '次'
+      truncate: '...'
